# Parser

./: CMakeLists.txt  Dockerfile  README.md  build-guide.md  config.json  entrypoint-docker.sh  entrypoint.sh  run-trainng.sh
src/: AssetManager.cpp  AssetManager.h  ElasticsearchClient.cpp  ElasticsearchClient.h  PacketParser.cpp  PacketParser.h  RedisCache.cpp  RedisCache.h  TimeBasedCsvWriter.cpp  TimeBasedCsvWriter.h  UnifiedWriter.cpp  UnifiedWriter.h  main.cpp
src/protocols/: ArpParser.cpp  ArpParser.h  BaseProtocolParser.cpp  BaseProtocolParser.h  Dnp3Parser.cpp  Dnp3Parser.h  DnsParser.cpp  DnsParser.h  GenericParser.cpp  GenericParser.h  IProtocolParser.cpp  IProtocolParser.h  ModbusParser.cpp  ModbusParser.h  S7CommParser.cpp  S7CommParser.h  TcpSessionParser.cpp  TcpSessionParser.h  UnknownParser.cpp  UnknownParser.h  XgtFenParser.cpp  XgtFenParser.h
